# skakoui

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  data.js  docker-compose.yml  index.html  lcbot-config.yml  test.sh
.github/workflows/: deploy.yml
benches/: m8n2.txt  m8n3.txt  perft.rs  searcher.rs
deploy/infrastructure/: main.tf  provider.tf
deploy/manifests/: skakoui-lichess.yml
dev/bench/: data.js
mate/in1/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
mate/in1/change/: estimates.json
mate/in1/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
mate/in1/report/: index.html
mate/in2/base/: estimates.json  raw.csv  sample.json  tukey.json
mate/in2/change/: estimates.json
mate/in2/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
mate/in2/report/: index.html
mate/in3/base/: estimates.json  raw.csv  sample.json  tukey.json
mate/in3/change/: estimates.json
mate/in3/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
mate/in3/report/: index.html
mate/report/: index.html
mate_in_1/https___lichess.org_analysis_1Q6_8_3p1pk1_2pP4_1p2K3_5R2_5qP1_8_/base/: estimates.json  sample.json  tukey.json
mate_in_1/https___lichess.org_analysis_1Q6_8_3p1pk1_2pP4_1p2K3_5R2_5qP1_8_/new/: benchmark.json  raw.csv
mate_in_1/https___lichess.org_analysis_1Q6_8_3p1pk1_2pP4_1p2K3_5R2_5qP1_8_/report/: index.html
mate_in_1/https___lichess.org_analysis_1Q6_q6p_k2p2pP_p7_Pp4P1_5P2_1PP3K1_/base/: benchmark.json  raw.csv  sample.json  tukey.json
plru/: README.md
report/: index.html
src/: bitboard.rs  board.rs  fen.rs  file.rs  lib.rs  main.rs  move_generation.rs  moves.rs  perft.rs  pgn.rs  piece.rs  piece_map.rs  player.rs  rank.rs  search.rs  square.rs  strategies.rs
src/move_generation/: bishop.rs  castling.rs  king.rs  knight.rs  magic.rs  pawn.rs  piece_type.rs  queen.rs  rook.rs
src/search/: tree.rs  ttable.rs
tests/: board_test.rs  m8n2.txt  perft.rs  searcher_test.proptest-regressions  searcher_test.rs
tests/strategies/: mod.rs
(+2834 files in other folders)
