[package]
name = "chess"
version = "0.1.0"
authors = ["Felix Chapman <aelred717@gmail.com>"]
edition = "2018"

[dependencies]
enum-map = "0.4.1"
lazy_static = "1.2.0"
rand = "0.6.1"
array-init = "0.0.4"
chashmap = "2.2.0"
tee = "0.1.0"
arrayvec = "0.5.1"

[dev-dependencies]
pretty_assertions = "0.5.1"
spectral = "0.6.0"
proptest = "0.10.1"

[features]
# Makes warnings into errors
strict = []
log-search = []

[profile.release]
debug = true