[package]
name = "skakoui"
version = "0.1.0"
authors = ["Felix Chapman <aelred717@gmail.com>"]
edition = "2018"

[dependencies]
enum-map = "0.4.1"
lazy_static = "1.2.0"
rand = "0.6.1"
array-init = "0.0.4"
arrayvec = "0.5.1"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.32"

[dev-dependencies]
pretty_assertions = "0.5.1"
spectral = "0.6.0"
proptest = "0.10.1"

[features]
# Makes warnings into errors
strict = []
log-search = []
log-search2 = []
expensive_tests = []

[profile.release]
debug = true