[package]
name = "skakoui"
version = "0.1.0"
authors = ["Felix Chapman <aelred717@gmail.com>"]
edition = "2018"

[dependencies]
enum-map = "0.4.1"
lazy_static = "1.2.0"
rand = "0.6.1"
array-init = "0.0.4"
arrayvec = "0.5.1"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.32"
regex = "1.3.9"

[dev-dependencies]
pretty_assertions = "0.5.1"
spectral = "0.6.0"
proptest = "0.10.1"
criterion = "0.3"
itertools = "0.9.0"

[features]
# Makes warnings into errors
strict = []
log-search = []
log-search2 = []

[profile.release]
debug = true

[[bench]]
name = "searcher"
harness = false

[[bench]]
name = "perft"
harness = false

# This bench = false stuff is because of a conflict between libtest and criterion
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[[bin]]
name = "cli"
bench = false

[[bin]]
name = "uci"
bench = false
